# server-old

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md
api/: Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  sea_orm_active_enums.rs  user_account.rs
migrations/: 2020-04-10_04-44-26_create_users.sql  20210514043607_create_users.sql  20220211233208_init.down.sql  20220211233208_init.up.sql  20220211233308_create_user_account.down.sql  20220211233308_create_user_account.up.sql  20220211233308_create_users.down.sql  20220211233308_create_users.up.sql  init.sql
polar/: main.polar  users.polar
server/: Cargo.toml
server/src/: main.rs
src/: actions.rs  auth.rs  constants.rs  error.rs  macros.rs  main.rs  models.rs  server.rs
src/endpoints/: mod.rs  register.rs
src/handlers/: auth.rs  login.rs  mod.rs  user.rs
src/models/: mod.rs  user.rs
src/utils/: mail.rs  mod.rs  pass.rs
