[package]
name = "mixini-server"
version = "0.1.0"
authors = ["Allen Bui <fairingrey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
axum = { version = "0.4.5", features = ["headers", "http2", "multipart"] }
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
lettre = { version = "0.10.0-rc.4", features = [
    "tokio1",
    "tokio1-native-tls",
    "tracing",
    "serde",
] }
libreauth = "0.14.1"
oso = { git = "https://github.com/fairingrey/oso", branch = "rust-addl-interface", features = [
    "uuid-07",
] }
oxide-auth = "0.5.1"
oxide-auth-axum = "0.1.0"
rand = "0.8.5"
redis = { version = "0.21.5", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
], default-features = false }
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.10", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
tower = "0.4.11"
tower-http = { version = "0.2.2", features = [
    "add-extension",
    "trace",
    "cors",
] }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
ulid = { version = "0.5.0", features = ["serde", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }
