[package]
name = "mixini"
version = "0.1.0"
authors = ["Allen <fairingrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2.0"
chrono = "0.4.11"
dotenv = "0.15.0"
futures = "0.3.4"
sqlx = { version = "0.3.3", default-features = false, features = ["runtime-tokio", "postgres"] }
tantivy = "0.12.0"
tokio = { version = "0.2.17", features = ["sync", "time"] }
warp = "0.2.2"
