
[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
bincode = "1.3.3"
oso = { git = "https://github.com/fairingrey/oso", branch = "rust-addl-interface", features = [
    "uuid-07",
] }
redis = { version = "0.21.5", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
], default-features = false }
sea-orm = { version = "0.7.1", features = [
    "macros",
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
