[package]
name = "server"
version = "0.1.0"
authors = ["Allen <fairingrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
tide = "0.11.0"
chrono = "0.4.11"
dotenv = "0.15.0"
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-async-std", "postgres", "uuid"] }
tantivy = "0.12.0"
argonautica = "0.2.0"
